# encordingman

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  encoder.rs  launcher.rs  lib.rs  main.rs  scorer.rs
src/components/: BatchView.tsx  ConvertView.tsx  Settings.tsx
src/lib/: tauri-commands.ts
